objects/Analise_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Predio_instala_es__c</fullName>
        <label>Prédio / instalações</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alugado</fullName>
                </value>
                <value>
                    <fullName>Próprio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prev_vendas_mes__c</fullName>
        <formula>Valor_total__c /  Meses_at_junho__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previsão de vendas por mês (FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previsao_mes_ate_junho__c</fullName>
        <label>Previsão mês até junho</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Protestos_Pontos__c</fullName>
        <formula>IF( Protestos__c  &gt;= 20, -20 , 
IF(AND ( Protestos__c &gt;10, Protestos__c &lt;=19),-15, 
IF(AND (Protestos__c &gt;5, Protestos__c &lt;=10),-10,
IF(AND (Protestos__c &lt;=5, Protestos__c &gt;0),-5,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protestos-Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protestos__c</fullName>
        <label>Protestos</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pts_obtidos__c</fullName>
        <formula>Pontos_obtidos__c +  Pontos_obtidos2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontos obtidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quanto_tempo_no_mercado__c</fullName>
        <formula>IF(  ISBLANK(Data_de_fundacao__c),NULL, text (FLOOR((TODAY() -  Data_de_fundacao__c) / 365)) &amp; &quot; anos e &quot; &amp;  text(FLOOR(MOD((TODAY() -  Data_de_fundacao__c) , 365)/12)) &amp; &quot; meses&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempo de mercado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramo_de_atuacao_Macrosegmento__c</fullName>
        <label>Ramo de atuação - Macrosegmento</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_jud_ou_part_em_fal_de_outra_emp_PTO__c</fullName>
        <formula>IF( ISPICKVAL( Rec_jud_ou_part_em_fal_de_outra_empresa__c , &quot;Sim&quot;),-10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recuperação judicial ou falência - ptos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rec_jud_ou_part_em_fal_de_outra_empresa__c</fullName>
        <label>Recuperação judicial ou falência</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relac_com_Seg_de_Alimentos_Pontos__c</fullName>
        <formula>IF( ISPICKVAL( Relacionamento_com_Seg_de_Alimentos__c , &quot;Sim&quot;),5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relacionamento Segmento Alimentos - Ptos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relac_com_Seg_de_Bebidas_Pontos__c</fullName>
        <formula>IF( ISPICKVAL( Relacionamento_com_Seg_de_Bebidas__c , &quot;Sim&quot;),10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relacionamento Segmento Bebidas - Ptos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relacionamento_com_Seg_de_Alimentos__c</fullName>
        <label>Relacionamento Segmento Alimentos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacionamento_com_Seg_de_Bebidas__c</fullName>
        <label>Relacionamento Segmento Bebidas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restricoes_Pontos__c</fullName>
        <formula>IF( ISPICKVAL( Restricoes__c , &quot;Não&quot;),15, 
IF(ISPICKVAL(Restricoes__c ,&quot;Não Relevantes&quot;),0,5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restrições - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restricoes__c</fullName>
        <label>Restrições</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Não Relevantes</fullName>
                </value>
                <value>
                    <fullName>Sim Relevantes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risco_de_Performance_Atual_Pontos__c</fullName>
        <formula>IF ( ISPICKVAL ( Risco_de_Performance_Atual__c,&quot;A&quot; ), 35,
IF ( ISPICKVAL ( Risco_de_Performance_Atual__c,&quot;B&quot; ), 25,
IF ( ISPICKVAL ( Risco_de_Performance_Atual__c,&quot;C&quot; ), 15,
IF ( ISPICKVAL ( Risco_de_Performance_Atual__c,&quot;D&quot; ), 0, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risco de Performance Atual Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risco_de_Performance_Atual__c</fullName>
        <label>Risco de Performance Atual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Royal_Salute_ca__c</fullName>
        <label>Royal Salute (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royal_Salute_preco__c</fullName>
        <label>Royal Salute preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_Atual_de_Fornecedores_a_Pagar__c</fullName>
        <label>Saldo Atual de Fornecedores a Pagar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setembro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Setembro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_term__c</fullName>
        <label>Special term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sugestao_do_analista__c</fullName>
        <label>Sugestão do analista</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sugestao_parcial_de_limite2__c</fullName>
        <formula>(Media_de_acumulos__c * Total_de_pontos__c )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sugestão parcial de limite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sugestao_parcial_de_limite__c</fullName>
        <formula>Calculo_parcial_limite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sugestão parcial de limite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Superior_a_90_dias_Compras__c</fullName>
        <label>Superior a 90 dias - Compras %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Superior_a_90_dias_Vendas__c</fullName>
        <label>Superior a 90 dias - Vendas %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Teacher_s_ca__c</fullName>
        <label>Teacher&apos;s (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teacher_s_preco__c</fullName>
        <label>Teacher&apos;s preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefone_Contato_3__c</fullName>
        <label>Telefone / Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefone_Contato_ref_banc1__c</fullName>
        <label>Telefone / Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefone_Contato_ref_banc2__c</fullName>
        <label>Telefone / Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefone_princ_fornec2__c</fullName>
        <label>Telefone / Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefone_princ_fornec__c</fullName>
        <label>Telefone / Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Temp_quad_soc_anos__c</fullName>
        <label>Tempo quadro societário (anos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_quad_soc_pts__c</fullName>
        <formula>IF( Temp_quad_soc_anos__c &gt; 5, 15, 
    IF(AND(Temp_quad_soc_anos__c &lt; 5, Temp_quad_soc_anos__c &gt; 3),-5, 
        IF(AND(Temp_quad_soc_anos__c &lt; 3, Temp_quad_soc_anos__c &lt;&gt; 0) ,-6,-10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempo quadro societário - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ca__c</fullName>
        <formula>Absolut_ca__c +  Ballantines_ca__c +  Chivas_ca__c +  Montilla_ca__c +  Natu_Nobilis_ca__c +  Orloff__c +  Passport_ca__c +  Teacher_s_ca__c +  Havana_Club_ca__c +  Jameson_ca__c +  Perrie_Jouet_ca__c +  Royal_Salute_ca__c +  Outros_ca__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_de_pontos__c</fullName>
        <formula>Associado_CISP_desde_Pontos__c +  Media_de_Atraso_Pontos__c +   Risco_de_Performance_Atual_Pontos__c  +  Relac_com_Seg_de_Bebidas_Pontos__c +  Relac_com_Seg_de_Alimentos_Pontos__c +  Restricoes_Pontos__c +  Protestos_Pontos__c +  Cheque_sem_Fundo_Pontos__c +  Pendencia_Financeira_Pontos__c +  Rec_jud_ou_part_em_fal_de_outra_emp_PTO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total de pontos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_1__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_2__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_3__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Natu_Nobilis__c</fullName>
        <formula>Natu_Nobilis_ca__c *  Natu_Nobilis_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <formula>Absolut_ca__c *  Absolut_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_atual_de_estoques__c</fullName>
        <label>Valor Atual de Estoques</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_ballantines__c</fullName>
        <formula>Ballantines_ca__c *  Ballantine_s_pre_o__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_chivas__c</fullName>
        <formula>Chivas_ca__c *  Chivas_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_da_divisao_da_media__c</fullName>
        <formula>IF( Assoc_030_Cargil_Alimentos__c,1,0) + IF(  Assoc_053_Salton_Bebidas__c ,1,0) + IF(  Assoc_055_Diageo_bebidas__c ,1,0) + IF(  Assoc_132_Moet_bebidas__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor da divisão da média</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_endiv1__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_endiv2__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_endiv3__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_havana_club__c</fullName>
        <formula>Havana_Club_ca__c *  Havana_Club_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_jameson__c</fullName>
        <formula>Jameson_ca__c *  Jameson_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_medio_de_compras_1__c</fullName>
        <label>Valor médio de compras</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_medio_de_compras_2__c</fullName>
        <label>Valor médio de compras</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_medio_de_compras_3__c</fullName>
        <label>Valor médio de compras</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_mensal_aluguel__c</fullName>
        <inlineHelpText>Valor em R$.</inlineHelpText>
        <label>Valor mensal aluguel</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_mensal_folha_de_pagamento__c</fullName>
        <inlineHelpText>Valor em R$.</inlineHelpText>
        <label>Valor mensal folha de pagamento</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_montilla__c</fullName>
        <formula>Montilla_ca__c *  Montilla_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_orloff__c</fullName>
        <formula>Orloff__c *  Orlof_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_outros__c</fullName>
        <formula>Outros_ca__c *  Outros_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_passport__c</fullName>
        <formula>Passport_ca__c *  Passport_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_perrier_jouet__c</fullName>
        <formula>Perrie_Jouet_ca__c *  Perrier_Jouet_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_royal_salute__c</fullName>
        <formula>Royal_Salute_ca__c *  Royal_Salute_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_teachers__c</fullName>
        <formula>Teacher_s_ca__c *  Teacher_s_preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_total__c</fullName>
        <formula>Valor__c +  Valor_ballantines__c +  Valor_chivas__c +  Valor_montilla__c +  Valor_Natu_Nobilis__c +  Valor_orloff__c +  Valor_passport__c +  Valor_teachers__c +  Valor_havana_club__c +  Valor_jameson__c +  Valor_perrier_jouet__c +  Valor_royal_salute__c +  Valor_outros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vencimento_endiv1__c</fullName>
        <label>Vencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vencimento_endiv2__c</fullName>
        <label>Vencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vencimento_endiv3__c</fullName>
        <label>Vencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendas_totais_12_meses__c</fullName>
        <formula>Janeiro__c +  Fevereiro__c + Marco__c + Abril__c +  Maio__c +  Junho__c +  Julho__c +  Agosto__c +  Setembro__c +  Outubro__c +  Novembro__c +  Dezembro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendas Totais 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Análise de crédito</label>
    <nameField>
        <displayFormat>AC{000000}</displayFormat>
        <label>Número da Análise de crédito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises de crédito</pluralLabel>
    <recordTypes>
        <fullName>BRA_Revision</fullName>
        <active>true</active>
        <description>Revision Record Type</description>
        <label>BRA_Revision</label>
    </recordTypes>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_box_e_valor_do_acumulo</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND( Assoc_055_Diageo_bebidas__c = false, Maior_acumulo_diageo__c &gt;0),
(AND( Assoc_055_Diageo_bebidas__c = true, OR( Maior_acumulo_diageo__c &lt;=0, ISBLANK(Maior_acumulo_diageo__c )))),
AND(  Assoc_132_Moet_bebidas__c  = false,   Maior_acumulo_moet__c   &gt;0),
(AND(  Assoc_132_Moet_bebidas__c  = true, OR(   Maior_acumulo_moet__c   &lt;=0, ISBLANK(  Maior_acumulo_moet__c   )))),
AND(  Assoc_053_Salton_Bebidas__c  = false,   Maior_acumulo_salton__c   &gt;0),
(AND(  Assoc_053_Salton_Bebidas__c  = true, OR(   Maior_acumulo_salton__c   &lt;=0, ISBLANK(  Maior_acumulo_salton__c   )))),
AND(  Assoc_030_Cargil_Alimentos__c  = false,  Maior_acumulo_cargil__c  &gt;0),
(AND(  Assoc_030_Cargil_Alimentos__c  = true, OR(  Maior_acumulo_cargil__c  &lt;=0, ISBLANK( Maior_acumulo_cargil__c  ))))
)</errorConditionFormula>
        <errorMessage>É necessário marcar o checkbox da &quot;Assoc&quot; caso haja um valor em &quot;Maior acúmulo&quot;.

O valor deve ser positivo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_executivo_informa_previsao_vendas</fullName>
        <active>false</active>
        <description>Obriga o preenchimento da previsão de vendas na análise de crédito pelo Executivo.</description>
        <errorConditionFormula>Valor_total__c &lt;= 0</errorConditionFormula>
        <errorMessage>Preencher informações de Previsão de Vendas FY</errorMessage>
    </validationRules>
</CustomObject>